[gd_scene load_steps=4 format=3 uid="uid://crbv7a1q6kijt"]

[ext_resource type="FontFile" uid="uid://d0jwvllp2ku3i" path="res://Assets/Fonts/OptimusPrinceps.ttf" id="1_08l4r"]
[ext_resource type="Script" uid="uid://c0dfusrw74lx8" path="res://EndGameScreen.gd" id="1_tt3y6"]
[ext_resource type="FontFile" uid="uid://br1g4yrtam3xr" path="res://Assets/Fonts/m6x11.ttf" id="3_qftkq"]

[node name="EndGameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_tt3y6")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Death Message" type="Label" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 320.0
offset_right = 1152.0
offset_bottom = 512.0
theme_override_colors/font_color = Color(0.448662, 0, 0.00768516, 1)
theme_override_fonts/font = ExtResource("1_08l4r")
theme_override_font_sizes/font_size = 100
text = "THEY DINED"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Victory Message" type="Label" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 320.0
offset_right = 1152.0
offset_bottom = 512.0
theme_override_colors/font_color = Color(0.309804, 0.792157, 0.00392157, 1)
theme_override_fonts/font = ExtResource("1_08l4r")
theme_override_font_sizes/font_size = 100
text = "LUNCH HAS BEEN SERVED"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BossStageMessage" type="Label" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 470.0
offset_right = 1144.0
offset_bottom = 662.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_08l4r")
theme_override_font_sizes/font_size = 20
text = "thank you for playing this fanmade stage inspired by the arknights character 'priestess'"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ReturnToMain" type="Button" parent="."]
visible = false
layout_mode = 0
offset_right = 1280.0
offset_bottom = 800.0
theme_override_fonts/font = ExtResource("3_qftkq")
theme_override_font_sizes/font_size = 20
text = "



































Click anywhere to return to main menu"
flat = true
autowrap_mode = 3

[connection signal="pressed" from="ReturnToMain" to="." method="_on_return_to_main_pressed"]
